# aleksander-mendoza.github.io

./: .gitignore  01-isabelle-fundamentals.Rmd  02-essential-algebra-and-set-theory.Rmd  02-set-theory.Rmd  03-abstract-algebra.Rmd  04-topology.Rmd  05-functional-analysis.Rmd  06-measure-theory.Rmd  08-real-analysis.Rmd  10-abstract-algebra2.Rmd  CNAME  Gemfile  Test.thy  Test.thy~  _bookdown.yml  _config.yml  about.markdown  about_my_markdown.html  archives.html  build.py  faq.markdown  first_steps_chaos.html  gpu_computing.html  index.Rmd  index.css  index.html  index.js  index.markdown  index.md  join_us.markdown  paradigms.html  test.html  vulkan.html  where_to_begin_code.html  where_to_begin_theory.html
_data/: navigation.yml
_includes/: head.html
_includes/views/: footer.html
_posts/: 2020-04-18-hoare_logic.markdown  2020-04-18-rodemap.markdown  2020-04-18-welcome.markdown  2020-04-19-alt_ergo.markdown  2020-04-19-hoare_logic_math.markdown  2020-04-19-more_jml.markdown  2020-05-24-glushkov_mealy.markdown  2020-05-24-transducers.markdown  2020-05-25-compiling_regexes.markdown  2020-05-25-glushkov.markdown  2020-05-26-algebra.markdown  2020-05-26-understanding_programming.markdown  2020-05-27-compiler_in_c.markdown  2020-05-28-conference_georgia.markdown  2020-05-29-mealy_regexes.markdown  2020-05-30-glushkov_compiler.markdown  2020-05-30-local_languages.markdown  2020-05-31-recognizing_language_relations.markdown  2020-06-03-real_automata.markdown  2020-06-04-generalized_pumping_lemma.markdown  2020-06-06-mealy_normalization.markdown  2020-06-18-mealy_compiler.markdown  2020-06-18-mealy_compiler_extended.markdown  2020-06-21-intro to logic copy.markdown  2020-06-21-intro to logic.markdown  2020-06-28-syntax_highlighter.markdown  2020-07-12-mealy_compiler_extended.markdown  2020-07-13-weighted_transducers.markdown  2024-03-14-welcome-to-jekyll.markdown  2024-04-14-erste.markdown  2024-04-14-willkommen.markdown  2024-04-15-freiwillige.markdown  2024-04-15-infoabend.markdown  2024-05-22-gets-los.markdown  2024-05-28-erste-versammlung.markdown  2024-06-09-zweite-versammlung.markdown  2024-06-20-dritte-versammlung.markdown  2024-07-01-vierte-versammlung.markdown  2024-07-04-bundesweite-versammlung.markdown  2024-07-18-action-pop.markdown  (+1 more)
blog/: hello.html  machine_learning.html  mathematical.html  programming.html
blog/machine_learning/: AI_math.html  data.html  natural_language_processing.html
blog/mathematical/: jml.html
blog/mathematical/jml/: assignability.html  basics.html  derivation.html  ghosts.html  loops.html  side_effects.html
blog/programming/: java.html  linux.html  swift.html
blog/programming/java/: advices.html
blog/programming/java/advices/: Java_good_practices.html
blog/programming/linux/: commandline.html  kernel.html
code/mealy_compiler/: compile.sh
code/mealy_compiler/src/: CMakeLists.txt  syntax_parser.y
code/mealy_compiler_extras/: run.sh
code/mealy_compiler_extras/src/: CMakeLists.txt  ast.c  formal_languages.c  glushkov.c  main.c  syntax_parser.y  syntax_scanner.l  vars.c
code/mealy_compiler_extras/src/include/: ast.h  formal_languages.h  glushkov.h  hashmap.h  vars.h
code/mealy_compiler_web_and_no_leaks/: clean.sh  compile.sh  run.sh  web_mealy_compiler.html  web_mealy_compiler_ace.html
code/mealy_compiler_web_and_no_leaks/src/: CMakeLists.txt  syntax_parser.y  syntax_scanner.l
code/reentrant_bison/src/: CMakeLists.txt  syntax_scanner.l
dev/: hello.md  machine_learning.md  mathematical.md  programming.md
dev/machine_learning/: AI_math.md  data.md  natural_language_processing.md
dev/mathematical/: jml.md
dev/mathematical/jml/: assignability.md  basics.md  derivation.md  ghosts.md  loops.md  side_effects.md
dev/programming/: java.md  linux.md  thrax.md
dev/programming/java/: advices.md
dev/programming/linux/: commandline.html  commandline.md  kernel.md
lib/highlight/: highlight.min.js
presentations/: mealy_machines.html
(+8 files in other folders)
